[project]
name = "lumen"
version = "2.0"
description = "Gentry SDA Projector Control"
authors = [{ name = "Ryan Hiebert" }]

requires-python = ">=3.7"
dependencies = [
  "Flask",
  "gunicorn",
]
classifiers = [
    "Private :: Do Not Upload",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-flask",
  "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
